Fix alert message z-index

--- a/app/assets/stylesheets/frontend/layout.scss
+++ b/app/assets/stylesheets/frontend/layout.scss
@@ -612,7 +612,7 @@ article .help-notice ul {
   top: 100px;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 9999;
 
   .flash-inner {
     margin: 0 auto;
